--- a/todo.txt
+++ b/todo.txt
@@ -1,2 +1,3 @@
 1. Read CSV Data into CorrectNames
 2. Modify Renamers to read files and rename using fucntions in Oldfile
+3. Create Maven Project and make JUnit test cases
