--- a/todo.txt
+++ b/todo.txt
@@ -1,2 +1,3 @@
+Produce a list of missing submission files based on csv student list
 make JUnit test cases
 find some way to implement Files.java interface( or remove it)
