--- a/todo.txt
+++ b/todo.txt
@@ -1,2 +1,1 @@
-Removal of any code smells
-Clear application of design patterns
+For the best grade we gotta remove code smells and show clear application of design patterns
